// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkerCard can be rendered correctly 1`] = `
<div class="v-card v-sheet theme--light">
  <header class="blue-grey lighten-5 v-sheet theme--light elevation-0 v-toolbar v-toolbar--dense v-toolbar--flat v-app-bar" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
    <div class="v-toolbar__content" style="height: 48px;">
      <div title="crawler title" class="v-toolbar__title">
        crawler title
      </div>
      <div class="spacer"></div>
      <div class="v-toolbar__items">
        <!----> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus-circle-outline theme--light"></i></span></button></span> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-open-in-new theme--light"></i></span></button></span>
        <transition-stub name="fade-transition"><span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-refresh theme--light"></i></span></button></span></transition-stub>
      </div>
    </div>
  </header>
  <div class="container">
    <div class="layout">
      <div class="flex xs12"><span class="grey--text">
          crawler description
        </span></div>
    </div>
    <div class="layout wrap">
      <div class="flex xs12">
        <div class="v-input theme--light v-text-field">
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-text-field__slot"><label for="input-30" class="v-label theme--light" style="left: 0px; position: absolute;">Username</label><input required="required" id="input-30" type="text"></div>
              <div class="v-input__append-inner">
                <div></div>
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</div>
`;

exports[`WorkerCard can render error correctly 1`] = `
<div class="v-card v-sheet theme--light">
  <header class="blue-grey lighten-5 v-sheet theme--light elevation-0 v-toolbar v-toolbar--dense v-toolbar--flat v-app-bar" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
    <div class="v-toolbar__content" style="height: 48px;">
      <div title="crawler title" class="v-toolbar__title">
        crawler title
      </div>
      <div class="spacer"></div>
      <div class="v-toolbar__items">
        <!----> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus-circle-outline theme--light"></i></span></button></span> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-open-in-new theme--light"></i></span></button></span>
        <transition-stub name="fade-transition"><span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-refresh theme--light"></i></span></button></span></transition-stub>
      </div>
    </div>
  </header>
  <div class="container">
    <div class="layout">
      <div class="flex xs12"><span class="grey--text">
          crawler description
        </span></div>
    </div>
    <div class="layout wrap">
      <div class="flex xs12">
        <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-text-field__slot"><label for="input-115" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Username</label><input required="required" id="input-115" type="text"></div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--clear"><button type="button" aria-label="clear icon" class="v-icon notranslate v-icon--link mdi mdi-close theme--light"></button></div>
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</div>
`;

exports[`WorkerCard can render result correctly 1`] = `
<div class="v-card v-sheet theme--light">
  <header class="blue-grey lighten-5 v-sheet theme--light elevation-0 v-toolbar v-toolbar--dense v-toolbar--flat v-app-bar" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
    <div class="v-toolbar__content" style="height: 48px;">
      <div title="crawler title" class="v-toolbar__title">
        crawler title
      </div>
      <div class="spacer"></div>
      <div class="v-toolbar__items">
        <!----> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus-circle-outline theme--light"></i></span></button></span> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-open-in-new theme--light"></i></span></button></span>
        <transition-stub name="fade-transition"><span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-refresh theme--light"></i></span></button></span></transition-stub>
      </div>
    </div>
  </header>
  <div class="container">
    <div class="layout">
      <div class="flex xs12"><span class="grey--text">
          crawler description
        </span></div>
    </div>
    <div class="layout wrap">
      <div class="flex xs12">
        <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-text-field__slot"><label for="input-94" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Username</label><input required="required" id="input-94" type="text"></div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--clear"><button type="button" aria-label="clear icon" class="v-icon notranslate v-icon--link mdi mdi-close theme--light"></button></div>
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</div>
`;

exports[`WorkerCard can render username correctly 1`] = `
<div class="v-card v-sheet theme--light">
  <header class="blue-grey lighten-5 v-sheet theme--light elevation-0 v-toolbar v-toolbar--dense v-toolbar--flat v-app-bar" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
    <div class="v-toolbar__content" style="height: 48px;">
      <div title="crawler title" class="v-toolbar__title">
        crawler title
      </div>
      <div class="spacer"></div>
      <div class="v-toolbar__items">
        <!----> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus-circle-outline theme--light"></i></span></button></span> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-open-in-new theme--light"></i></span></button></span>
        <transition-stub name="fade-transition"><span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-refresh theme--light"></i></span></button></span></transition-stub>
      </div>
    </div>
  </header>
  <div class="container">
    <div class="layout">
      <div class="flex xs12"><span class="grey--text">
          crawler description
        </span></div>
    </div>
    <div class="layout wrap">
      <div class="flex xs12">
        <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-text-field__slot"><label for="input-50" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Username</label><input required="required" id="input-50" type="text"></div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--clear"><button type="button" aria-label="clear icon" class="v-icon notranslate v-icon--link mdi mdi-close theme--light"></button></div>
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</div>
`;

exports[`WorkerCard can render warning correctly 1`] = `
<div class="v-card v-sheet theme--light">
  <header class="blue-grey lighten-5 v-sheet theme--light elevation-0 v-toolbar v-toolbar--dense v-toolbar--flat v-app-bar" style="height: 48px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;">
    <div class="v-toolbar__content" style="height: 48px;">
      <div title="crawler title" class="v-toolbar__title">
        crawler title
      </div>
      <div class="spacer"></div>
      <div class="v-toolbar__items">
        <!----> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-plus-circle-outline theme--light"></i></span></button></span> <span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-open-in-new theme--light"></i></span></button></span>
        <transition-stub name="fade-transition"><span class="v-tooltip v-tooltip--bottom"><!----><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--default"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-refresh theme--light"></i></span></button></span></transition-stub>
      </div>
    </div>
  </header>
  <div class="container">
    <div class="layout">
      <div class="flex xs12"><span class="grey--text">
          crawler description
        </span></div>
    </div>
    <div class="layout wrap">
      <div class="flex xs12">
        <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field">
          <div class="v-input__control">
            <div class="v-input__slot">
              <div class="v-text-field__slot"><label for="input-71" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Username</label><input required="required" id="input-71" type="text"></div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--clear"><button type="button" aria-label="clear icon" class="v-icon notranslate v-icon--link mdi mdi-close theme--light"></button></div>
              </div>
            </div>
            <div class="v-text-field__details">
              <div class="v-messages theme--light">
                <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="layout xs12">
      <div class="flex align-self-start shrink"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light orange--text text--darken-2"></i></div>
      <div class="flex align-self-start"><span>Your username begins with a space.</span></div>
    </div>
    <div class="layout xs12">
      <div class="flex align-self-start shrink"><i aria-hidden="true" class="v-icon notranslate mdi mdi-alert theme--light orange--text text--darken-2"></i></div>
      <div class="flex align-self-start"><span>Your username includes space, which may not be supported by some crawlers.</span></div>
    </div>
    <!---->
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</div>
`;
